handle some problems and update swagger and update postman collection
